--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,4 +1,4 @@
-
+/* 
 
 .footer{
   position: absolute;
@@ -54,4 +54,4 @@
   font-size: 14px;
   color:#ffffff;
   margin: 2px 12.5px 2px 12.5px;
-}
+} */
