--- a/src/components/home/components/HomeBody/HomeBody.css
+++ b/src/components/home/components/HomeBody/HomeBody.css
@@ -1,18 +1,22 @@
 .body_menu{
-  display: inline-block;
-  height: 640px;
-  width: 350px;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: inherit;
+  height: 100%;
+  min-height: 500px;
+  width: 25%;
+  border-radius: 5px 0 0 5px;
   padding: 10px 0 0 0;
   background-color: #304269;
 }
 
 .body_map{
   display: inline-block;
-  height: 640px;
-  width: 850px;
+  width: 60%; 
+  border-radius: 0 5px 5px 0;
   background-color: white;
 }
-@media (max-width: 360px){
+/* @media (max-width: 360px){
   .body_map {display: none}
   .body_menu {width: 100%; height: auto}
-}
+} */
