--- a/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
@@ -1,9 +1,9 @@
 .drivers_block{
-  position:absolute;
-  top:30px;
-  left:0px;
-  width:890px;
-  height:1090px;
+  display: flex;
+  flex-direction: column;
+  width:100%;
+  height:80%;
+  margin-top: 2%;
 }
 .hiddenString{
   float: right;
@@ -11,28 +11,50 @@
 }
 .visibleString{
   float: right;
-  font-size: 14pt;
+  font-size: 1rem;
   font-family: "Roboto Regular";
 }
 .infoString{
-  float: left;
-  font-size: 14pt;
+  font-size: 1rem;
   font-family: "Roboto Medium";
+  margin-right: 1%;
 }
 .drivers_block_element{
-  position: absolute;
-  height:215px;
+  display: flex;
+  flex-direction: row;
+  height:15%;
   width:100%;
-  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+  box-shadow: 0 0 1px 1px rgba(221, 221, 221, 1);
+  padding: 3% 1.5%;
+  margin-bottom: 1%;
+}
+.drivers_block_element:hover{
+  box-shadow: 0 0 2px 5px rgba(221, 221, 221, 1);
+  cursor: pointer;
 }
 
+.block_element_left{
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  width: 57%;
+  border-right: 1px solid black;
+}
+.block_element_right{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 43%;
+  padding-left: 2%;
+}
+
+
+
 .block_element_photo{
-  position: absolute;
-  left:20px;
-  top:30px;
-  width:156px;
-  height: 156px;
-  background: url(pictures/driver1/drivers_body_photo.png) no-repeat
+  display: flex;
+  width:33.5%;
+  height:100%;
+  margin-right: auto;
 }
 
 
