--- a/src/components/drivers/DriversBody/DriversBlock/TripBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/TripBlock.css
@@ -1,102 +1,105 @@
-.block_element_tripBlock{
-    position:absolute;
-    float: left;
-    left: 510px;
-    top:25px;
-    width:355px;
-    height: 170px;
-  }
-.tripBlock_carInfo{
-    position:absolute;
-    top:5px;
-    left:25px;
-    width:305px;
-    height:45px;
-  }
-  .tripBlock_carInfo_carImage{
-    position:absolute;
-    top:10px;
-    left:0px;
-    width:75px;
-    height: 30px;
-    background: url(pictures/driver1/drivers_car_image.png) no-repeat;
-  }
-  .tripBlock_carInfo_carData{
-    position:absolute;
-    top:0px;
-    left:75px;
-    width:230px;
-    height: 100%;
-    text-align: top;
-  }
-  .tripBlock_buttonBlock{
-    position:absolute;
-    top:65px;
-    left: 15px;
-    width:340px;
-    height: 60px;
-  }
-  .tripBlock_buttonBlock_value{
-      position:absolute;
-      top: 0px;
-      left: 0px;
-      text-align: center;
-      width:80px;
-      height: 40px;
-      line-height: 40px;
+.element_right_line{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+.tripBlock_carImage{
+  display: flex;
+  width:15%;
+  height: 10%;
+}
+ 
+.tripBlock_carData{
+  display: flex;
+  flex-direction: column;
+  width:80%;
+  margin-left: auto;
+  height: 100%;
+  text-align: top;
+}
 
-      font-family: "Roboto Bold";
-      font-size: 24px;
-      color: #ff6600;
-  }
-  .tripBlock_buttonBlock_button{
-      position:absolute;
-      top:0px;
-      left: 85px;
-      height: 40px;
-      width: 256px;
-      text-align: center;
-      line-height: 40px;
-      background: url(pictures/driver1/drivers_tripBlock_button.png) no-repeat;
+.tripBlock_priceBlock{
+  display: flex;
+  text-align: center;
+  width:15%;
+  height: 15%; 
+}
+.tripBlock_priceBlock_price{
+  display: flex;
+  margin: auto;
+  font-family: "Roboto Bold";
+  font-size: 1.5rem;
+  color: #ff6600;
+}
+.tripBlock_buttonBlock{
+  display: flex;
+  flex-direction: column;
 
-      font-family: "Roboto Medium";
-      font-size: 16px;
-      color: #ffffff;
-  }
-  .tripBlock_buttonBlock_commentary{
-      position: absolute;
-      top:38px;
-      right: 0px;
-      font-size: 10pt;
-      color: #304269;
-      font-family: "Roboto Regular";
-  }
-  .tripBlock_detailed{
-    position:absolute;
-    top:145px;
-    right: 0px;
-    font-size: 12pt;
-    color: #304269;
-    font-family: "Roboto Medium";
-  }
+  width:80%;
+  height: 20%;
+  margin-left:auto;
+  padding: 2% 0;
+}
+.tripBlock_buttonBlock_button{
+  display: flex;
+  height: 15%;
+  width: 100%;
+  background-color: #304269;
+  border-color: #304269;
+  margin: 0 auto;
+  border-radius: 5px;
+}
+.drivers_block_element:hover .tripBlock_buttonBlock_button{
+  background-color: #ff6600;
+  border-color:#ff6600;
+}
+
+.buttonBlock_button_value{
+  display: flex;
+  font-family: "Roboto Medium";
+  font-size: 0.9rem;
+  color: #ffffff;
+  border-radius: 5px;
+  margin: 0 auto;
+}
+.tripBlock_buttonBlock_commentary{
+  display: flex;
+  font-size:0.59rem;
+  color: #304269;
+  font-family: "Roboto Regular";
+  margin: 0 auto;
+}
+.tripBlock_detailed{
+  display:flex;
+  margin: auto 0 0 auto;
+  font-size: 0.8rem;
+  color: #304269;
+  font-family: "Roboto Medium";
+}
+.drivers_block_element:hover .tripBlock_detailed{
+  color: #ff6600;
+}
+
+.carInfo_line{
+  display: flex;
+  flex-direction: row;
+}
 .carBrand_style{
-    top:0px;
-    float: left;
+    display: flex;
     font-family: "Roboto Medium";
-    font-size: 16pt;
+    font-size: 1.2rem;
     text-align: top;
 }
 .fuelType_style{
     font-family: "Roboto Regular";
-    font-size: 14pt;
+    font-size: 1rem;
     text-align: top;
+    padding-top: 1.5%;
+    margin-left: 2%;
 }
 .carProps_style{
-    position: absolute;
     font-family: "Roboto Regular";
-    font-size: 14pt;
-    left:0px;
-    top: 20px;
+    font-size: 1rem;
 }
 .hidden_enter_carBrand{
     visibility: hidden;
