--- a/src/components/drivers/DriversBody/DriversBody.css
+++ b/src/components/drivers/DriversBody/DriversBody.css
@@ -1,9 +1,26 @@
 .drivers_body{
-  position:absolute;
-  left:0;
-  right: 0;
-  margin: auto;
-  top:30px;
-  width:1200px;
-  height:1120px;
+  display: flex;
+  flex-direction: row;
+  width:100%;
+  height:100%;
+}
+.left_body_part{
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  height: 100%;
+  margin-right: 2%;
+  margin-top: 1%;
+  min-width: 590px;
+}
+.right_body_part{
+  display: flex;
+  flex-direction: column;
+  width: 23%;
+  height: 100%;
+  margin: 5% 5% 0 auto;
+  min-width: 150px;
+}
+@media (max-width: 1150px){
+  .left_body_part{margin-right: 10px}
 }
