--- a/src/components/drivers/DriversBody/DriversCommercial/DriversCommercial.css
+++ b/src/components/drivers/DriversBody/DriversCommercial/DriversCommercial.css
@@ -1,23 +1,20 @@
 .drivers_commercial{
-  position:absolute;
-  top:40px;
-  left:900px;
-  width:310px;
-  height:895px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 5% 0;
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
 }
 .commercial_picture1{
-  position: absolute;
-  top: 15px;
-  left:40px;
-  width: 240px;
-  height: 345px;
-  background: url(pictures/commercial_picture1.png);
+  display:flex;
+  width: 90%;
+  height: 40%;
+  margin: 0 auto 4% auto;
+
 }
 .commercial_picture2{
-  position:absolute;
-  top: 405px;
-  left:40px;
-  width: 240px;
-  height: 400px;
-  background: url(pictures/commercial_picture2.png);
+  display: flex;
+  width: 90%;
+  height: 55%;
+  margin: 0 auto 4% auto;
 }
