--- a/src/components/drivers/DriversBody/DriversProperties/DriversProperties.css
+++ b/src/components/drivers/DriversBody/DriversProperties/DriversProperties.css
@@ -1,17 +1,31 @@
 .drivers_properties{
-  position:absolute;
-  top:0px;
-  left:0px;
-  width:890px;
-  height:30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width:100%;
+
 }
+.properties_leftBlock{
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  margin-right: auto;
+}
+
+.properties_rightBlock{
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  margin-left: auto;
+}
+
 .drivers_properties_text{
+  display: flex;
   float: left;
-  top:5px;
-  left:0px;
-  width: 70px;
-  height: 30px;
-  font-size: 12px;
+
+  height: 100%;
+  font-size: 0.8rem;
   color:#666666;
   font-family: "Roboto Light";
   line-height: 30px;
@@ -19,76 +33,46 @@
 }
 
 .properties_leftButton{
-  float: left; 
+  float: left;
+  margin-right:5px;
+  
 }
 .properties_rightButton{
   float: right;
+  margin-left:5px; 
 }
 .properties_buttonStyle{
+  display: flex;
   position: relative;
+  flex-direction: row; 
   font-family: "Roboto Regular";
   font-size: 9pt;
   color: #304269;
   background-color: #d9e8f5;
   border-radius: 3px;
   text-align: center;
-  line-height: 30px;
+  line-height: 250%;
 }
-.properties_leftHidden{
-  visibility: hidden;
-  float: left;
-  position: relative
-}
-.properties_rightHidden{
-  visibility: hidden;
-  float: right;
-  position: relative
+/*line-height в предыдущем стиле какое-то странное*/
+.properties_value{
+  display: flex;
+  margin: auto 2px;
 }
 .properties_arrow{
-  position: relative;
-  float: right;
-  top:11px;
-  right: 5px;
+  display: flex;
+  margin: auto 2px;
   width: 8px;
   height: 8px;
   background: url(pictures/drivers_properties_arrow.png) no-repeat;
 }
-.properties_leftSpace{
-  float: left;
-  height: 100%;
-  width: 5px;
-}
 
-.properties_rightBlock{
-  position: absolute;
-  top:0px;
-  right: 0px;
-  width: 375px;
-  height: 30px;
-}
-
-.properties_rightSpace{
-  float: right;
-  height: 100%;
-  width: 5px;
-  
-}
 .properties_rightButton_characteristic{
-  position: relative;
-  float: left;
-  left: 0px;
-  top: 0px;
-  height: 100%;
-  line-height: 30px; 
-
+  display: flex;
+  margin: auto 2px;
 }
 .properties_rightButton_value{
-  position: relative;
-  float: left;
-  right: 0px;
-  top:0px;
-  height: 100%;
-  line-height: 30px; 
+  display: flex;
+  margin: auto 2px;
   font-family: "Roboto Medium";
   font-size: 9pt;
 }
