--- a/src/components/home/HomeBody/infowindow.css
+++ b/src/components/home/HomeBody/infowindow.css
@@ -11,7 +11,7 @@
     float: left;
     width: 20px;
     height: 22px;
-    background: url(car-solid.svg) no-repeat;
+    background: url(./pictures/car-solid.svg) no-repeat;
     margin-right: 10px;
 
     
