--- a/src/components/home/HomeBody/HomeBody.css
+++ b/src/components/home/HomeBody/HomeBody.css
@@ -2,12 +2,13 @@
   display: flex;
   flex-direction: column;
   justify-content: stretch;
+  align-items: center;
   width: 25%;
   min-height: 500px;
   max-width: 500px;
   max-height: 800px;
   border-radius: 5px 0 0 5px;
-  padding: 10px 0 0 0;
+  /* padding: 10px 0 0 0; */
   background-color: #304269;
 }
 
